--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html::-webkit-scrollbar {
+	display: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+main {
+	display: grid;
+	height: 100vh;
+	width: 100%;
+	place-content: center;
+	background-color: #f1f1f1;
+}
+.image {
+	display: grid;
+	height: 100vh;
+	place-content: center;
+	background-color: #f1f1f1;
+	background-image: url("./bg-1.jpeg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 }
 
-.App-link {
-  color: #61dafb;
+p {
+	max-width: 75vw;
+	padding: 2.5vh 2.5vw;
+	border-radius: 3px;
+	background-color: #fff;
+	font-size: xx-large;
+}
+.left {
+	position: fixed;
+	top: 0;
+	left: 10px;
+	height: 100%;
+	width: 20%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	opacity: 0;
+	pointer-events: none;
+}
+.right {
+	width: 80%;
+	margin-left: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.highlight {
+	position: absolute;
+	z-index: -2;
+	background-color: rgb(0, 247, 255);
+	transform: scale(2);
+	transition: 0.1s ease-in-out;
+}
+
+li {
+	list-style: none;
+	padding: 10px;
+}
+li a {
+	text-decoration: none;
+	color: black;
+}
+.is-hidden {
+	opacity: 0;
+}
+.is-visible {
+	pointer-events: auto;
+	opacity: 1;
+}
+
+@media screen and (max-width: 600px) {
+	.right {
+		width: 100%;
+	}
+	.left {
+		display: none;
+	}
 }
